Fix wp-block-image alignleft/alignright margin override

--- a/style.css
+++ b/style.css
@@ -4157,6 +4157,7 @@ input[type="submit"]:hover,
    Neutralize WP/Genesis default block styles that interfere with layouts.
    ========================================================================== */
 
-.wp-block-image {
+.wp-block-image .alignleft,
+.wp-block-image .alignright {
 	margin: 0;
 }
